<resources>
    <string name="app_name">SistaCafe Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_add_note_button">add note button</string>
    <string name="txt_chip_work">Work</string>
    <string name="txt_chip_important">Important</string>
    <string name="txt_chip_other">Other</string>
    <string name="note_list_item_txt_subject">เมนู อาหารเย็นวันนี้</string>
    <string name="note_list_item_txt_description">รายการซื้อของ เมนูอาหารเย็นนี้ .......</string>
    <string name="note_list_item_txt_tag">Other</string>
    <string name="edt_newnote_title_text">Title</string>
    <string name="edittext_content_hinttext">Type here....</string>
    <string name="option_item_text_save">SAVE</string>
    <string name="option_item_text_upload_image">Upload Image</string>
    <string name="delete_image_content_description">Delete Image</string>
    <string name="text_tags">Tags</string>
</resources>