<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.NewNoteFragment">

    <EditText
        android:id="@+id/edt_title"
        style="@style/edittext_NewNote_Title"
        android:hint="@string/edt_newnote_title_text"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightGrey"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/edt_title" />

    <FrameLayout
        android:id="@+id/fl_image"
        android:layout_width="0dp"
        android:layout_height="197dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imv_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@color/lightGrey"
            app:shapeAppearanceOverlay="@style/ImageStyle" />

        <ImageButton
            android:id="@+id/btn_delete_image"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/delete_image_content_description"
            android:src="@drawable/ic_baseline_close_24"
            app:tint="@color/delete_imb_color" />
    </FrameLayout>


    <EditText
        android:id="@+id/edt_content"
        style="@style/edittext_content"
        android:hint="@string/edittext_content_hinttext"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/cv_tag"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/fl_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_tag"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/text_tag"
                style="@style/item_row_txt_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/text_tags" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tag"
                android:layout_marginTop="6dp"
                android:paddingStart="20dp"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_work"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:fontFamily="@font/roboto"
                    android:text="@string/txt_chip_work"
                    android:textColor="@color/black"
                    app:chipBackgroundColor="@color/chip_bg_color"
                    app:chipIcon="@drawable/color_work_tag"
                    app:chipIconVisible="true"
                    app:chipStrokeColor="@color/chip_stroke_color"
                    app:chipStrokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck"
                    tools:layout_editor_absoluteX="155dp"
                    tools:layout_editor_absoluteY="232dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_important"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:fontFamily="@font/roboto"
                    android:text="@string/txt_chip_important"
                    android:textColor="@color/black"
                    app:chipBackgroundColor="@color/chip_bg_color"
                    app:chipIcon="@drawable/color_important_tag"
                    app:chipIconVisible="true"
                    app:chipStrokeColor="@color/chip_stroke_color"
                    app:chipStrokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                    tools:layout_editor_absoluteX="155dp"
                    tools:layout_editor_absoluteY="232dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_other"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:fontFamily="@font/roboto"
                    android:text="@string/txt_chip_other"
                    android:textColor="@color/black"
                    app:chipBackgroundColor="@color/chip_bg_color"
                    app:chipIcon="@drawable/color_other_tag"
                    app:chipIconVisible="true"
                    app:chipStrokeColor="@color/chip_stroke_color"
                    app:chipStrokeWidth="1dp"
                    tools:ignore="TouchTargetSizeCheck"
                    tools:layout_editor_absoluteX="155dp"
                    tools:layout_editor_absoluteY="232dp" />


            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
