<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/note_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imv_thumbnail"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rl_text"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ThumbnailStyle"
            app:srcCompat="@mipmap/ic_launcher" />

        <RelativeLayout
            android:id="@+id/rl_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imv_thumbnail"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_title"
                style="@style/item_row_txt_subject"
                android:singleLine="true"
                android:text="@string/note_list_item_txt_subject" />

            <TextView
                android:id="@+id/txt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:singleLine="true"
                android:text="@string/note_list_item_txt_description"
                android:textColor="@color/textGrey"
                android:textSize="14sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imv_tag_color"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_below="@id/txt_content"
                android:layout_marginTop="9dp"
                android:src="@color/brownOtherTag"
                app:shapeAppearanceOverlay="@style/circleStyle"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/txt_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/imv_tag_color"
                android:fontFamily="@font/roboto"
                android:text="@string/note_list_item_txt_tag"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imv_tag_color"
                app:layout_constraintStart_toEndOf="@+id/imv_tag_color"
                app:layout_constraintTop_toTopOf="@+id/imv_tag_color" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <View
            android:id="@+id/underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@id/rl_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>